Optimize horizontal space to prevent menu wrap

--- a/WebVersion/css/style.css
+++ b/WebVersion/css/style.css
@@ -68,7 +68,7 @@ body {
     display: flex;
     flex-direction: column;
     gap: 4px;
-    max-width: 980px;
+    max-width: 1050px;
     margin: 0 auto;
 }
 
